kubernetes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: nimbus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
